# fusion-data-mcp

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/fusion_data_mcp/: __init__.py  config.py  errors.py  registry.py  serialization.py  server.py
src/fusion_data_mcp/connectors/: __init__.py  base.py  cmod.py  lhd.py  mast.py
src/fusion_data_mcp/models/: __init__.py  device.py  diagnostic.py  equilibrium.py  shot.py  signal.py
tests/: conftest.py
tests/integration/: conftest.py  test_cmod_live.py  test_lhd_live.py  test_mast_live.py
tests/unit/: conftest.py  test_registry.py  test_serialization.py
tests/unit/connectors/: conftest.py  test_lhd.py  test_mast.py
